In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Implement info boxes for hyperparameters of grid search and randomized search in markdown cells

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4967,24 +4967,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3100fcfa-df5b-459a-b2ff-aff36ee95ca3",
+   "id": "8d815b8d-fa8a-43bd-86a3-82f43e18968d",
    "metadata": {},
    "source": [
-    "### Grid Search \n",
-    "ℹ️ Hyperparameters: \n",
-    "- Core Parameters:\n",
-    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
-    "    - `param_grid`: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.  \n",
-    "    - `cv=5`: Number of folds for cross-validation.  \n",
-    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"precision\"`, `\"recall\"`, `\"f1\"`, `\"roc_auc\"`).  \n",
-    "- Optional Parameters:  \n",
-    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
-    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
-    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
-    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
-    "    - `random_state=None`: Ensures reproducibility of results when estimators or scoring functions involve randomness.  \n",
-    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
-    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
+    "### Grid Search  \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
+    "    ℹ️ Hyperparameters:  \n",
+    "    <ul>  \n",
+    "        <li>Core Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>estimator</code>: The machine learning model you want to optimize (e.g., <code>RandomForestClassifier</code>).</li>  \n",
+    "                <li><code>param_grid</code>: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.</li>  \n",
+    "                <li><code>cv=5</code>: Number of folds for cross-validation.</li>  \n",
+    "                <li><code>scoring=None</code>: The metric to evaluate model performance (e.g., <code>\"accuracy\"</code>, <code>\"precision\"</code>, <code>\"recall\"</code>, <code>\"f1\"</code>, <code>\"roc_auc\"</code>).</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "        <li>Optional Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>verbose=0</code>: Controls the verbosity of the output. Higher values provide more detailed logs.</li>  \n",
+    "                <li><code>n_jobs=None</code>: Number of jobs to run in parallel. <code>-1</code> uses all available CPU cores.</li>  \n",
+    "                <li><code>pre_dispatch=\"2*n_jobs\"</code>: Controls the number of jobs that get dispatched during parallel execution.</li>  \n",
+    "                <li><code>refit=True</code>: If <code>True</code>, the estimator is refit on the entire training set using the best parameters.</li>  \n",
+    "                <li><code>random_state=None</code>: Ensures reproducibility of results when estimators or scoring functions involve randomness.</li>  \n",
+    "                <li><code>error_score=np.nan</code>: Value to assign to the score if a parameter combination results in a failure.</li>  \n",
+    "                <li><code>return_train_score=False</code>: If <code>True</code>, training scores will be returned along with validation scores.</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "    </ul>  \n",
+    "</div>  \n"
    ]
   },
   {
@@ -5147,25 +5157,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ec974b-1d75-49e5-80f6-8ef788e8668a",
+   "id": "3c74d32e-a558-4314-9099-2804be9c4c79",
    "metadata": {},
    "source": [
-    "### Randomized Search\n",
-    "ℹ️ Hyperparameters: \n",
-    "- Core Parameters:\n",
-    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
-    "    - `param_distributions`: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.  \n",
-    "    - `n_iter=10`: The number of random combinations to sample from the parameter grid.  \n",
-    "    - `cv=5`: Number of folds for cross-validation.  \n",
-    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"precision\"`, `\"recall\"`, `\"f1\"`, `\"roc_auc\"`).  \n",
-    "- Optional Parameters:\n",
-    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
-    "    - `random_state=None`: Ensures reproducibility of results.  \n",
-    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
-    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
-    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
-    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
-    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
+    "### Randomized Search  \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
+    "    ℹ️ Hyperparameters:  \n",
+    "    <ul>  \n",
+    "        <li>Core Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>estimator</code>: The machine learning model you want to optimize (e.g., <code>RandomForestClassifier</code>).</li>  \n",
+    "                <li><code>param_distributions</code>: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.</li>  \n",
+    "                <li><code>n_iter=10</code>: The number of random combinations to sample from the parameter grid.</li>  \n",
+    "                <li><code>cv=5</code>: Number of folds for cross-validation.</li>  \n",
+    "                <li><code>scoring=None</code>: The metric to evaluate model performance (e.g., <code>\"accuracy\"</code>, <code>\"precision\"</code>, <code>\"recall\"</code>, <code>\"f1\"</code>, <code>\"roc_auc\"</code>).</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "        <li>Optional Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>verbose=0</code>: Controls the verbosity of the output. Higher values provide more detailed logs.</li>  \n",
+    "                <li><code>random_state=None</code>: Ensures reproducibility of results.</li>  \n",
+    "                <li><code>n_jobs=None</code>: Number of jobs to run in parallel. <code>-1</code> uses all available CPU cores.</li>  \n",
+    "                <li><code>pre_dispatch=\"2*n_jobs\"</code>: Controls the number of jobs that get dispatched during parallel execution.</li>  \n",
+    "                <li><code>refit=True</code>: If <code>True</code>, the estimator is refit on the entire training set using the best parameters.</li>  \n",
+    "                <li><code>error_score=np.nan</code>: Value to assign to the score if a parameter combination results in a failure.</li>  \n",
+    "                <li><code>return_train_score=False</code>: If <code>True</code>, training scores will be returned along with validation scores.</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "    </ul>  \n",
+    "</div>  \n"
    ]
   },
   {
