In machine_learning_template.ipynb > Modeling (Regression) > Hyperparameter Tuning section: Update markdown documentation comments for model 1 and 2 examples

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3416,20 +3416,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
+   "id": "d3e0291e-5f7a-43c4-a1d3-b409fa056362",
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "💡 Example: Random Forest Regressor\n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth`  \n",
-    "- `min_samples_split`\n",
-    "- `min_samples_leaf`\n",
-    "- `max_features`\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: Random Forest Regressor</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>min_samples_split</code></li>\n",
+    "        <li><code>min_samples_leaf</code></li>\n",
+    "        <li><code>max_features</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor\" target=\"_blank\">scikit-learn RandomForestRegressor documentation</a>.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -3492,22 +3494,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b61928-a213-4474-a934-17684a2d041e",
+   "id": "7fd7a298-1e53-4efa-80b1-5152884a3131",
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "💡 Example: XGBoost Regressor  \n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth` \n",
-    "- `learning_rate`\n",
-    "- `subsample` \n",
-    "- `colsample_bytree`\n",
-    "- `gamma`\n",
-    "- `min_child_weight`\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: XGBoost Regressor</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>learning_rate</code></li>\n",
+    "        <li><code>subsample</code></li>\n",
+    "        <li><code>colsample_bytree</code></li>\n",
+    "        <li><code>gamma</code></li>\n",
+    "        <li><code>min_child_weight</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -3618,20 +3622,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d47e4c1-d400-4e94-a03b-99417896b44e",
+   "id": "62c2d6e8-48d4-4e73-a0e2-578d5c38a8cd",
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "💡 Example: Random Forest Regressor\n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth`  \n",
-    "- `min_samples_split`\n",
-    "- `min_samples_leaf`\n",
-    "- `max_features`\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: Random Forest Regressor</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>min_samples_split</code></li>\n",
+    "        <li><code>min_samples_leaf</code></li>\n",
+    "        <li><code>max_features</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor\" target=\"_blank\">scikit-learn RandomForestRegressor documentation</a>.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -3696,22 +3702,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1761c5e-addf-4916-97a7-d44c7b024315",
+   "id": "b37163d1-945e-4a2b-a26d-8584862bd9bd",
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "💡 Example: XGBoost Regressor  \n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth` \n",
-    "- `learning_rate`\n",
-    "- `subsample` \n",
-    "- `colsample_bytree`\n",
-    "- `gamma`\n",
-    "- `min_child_weight`\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: XGBoost Regressor</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>learning_rate</code></li>\n",
+    "        <li><code>subsample</code></li>\n",
+    "        <li><code>colsample_bytree</code></li>\n",
+    "        <li><code>gamma</code></li>\n",
+    "        <li><code>min_child_weight</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
+    "</div>"
    ]
   },
   {
