In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Update markdown documentation comments for model 1 and 2 examples

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5007,20 +5007,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce66a1c-d2e8-4819-a35a-9b23545a0700",
+   "id": "be58eb45-fc5c-4072-a8af-e61a5dc9c140",
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "Example: Random Forest Classifier  \n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth`  \n",
-    "- `min_samples_split`\n",
-    "- `min_samples_leaf`\n",
-    "- `max_features`\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: Random Forest Classifier</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>min_samples_split</code></li>\n",
+    "        <li><code>min_samples_leaf</code></li>\n",
+    "        <li><code>max_features</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -5083,22 +5085,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905d7493-acb4-4043-891b-588621ff1872",
+   "id": "d2b358e0-bfbd-4a25-87d2-2ea75536525b",
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "Example: XGBoost Classifier\n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth` \n",
-    "- `learning_rate`\n",
-    "- `subsample` \n",
-    "- `colsample_bytree`\n",
-    "- `gamma`\n",
-    "- `min_child_weight`\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: XGBoost Classifier</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>learning_rate</code></li>\n",
+    "        <li><code>subsample</code></li>\n",
+    "        <li><code>colsample_bytree</code></li>\n",
+    "        <li><code>gamma</code></li>\n",
+    "        <li><code>min_child_weight</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
+    "</div>\n"
    ]
   },
   {
@@ -5209,20 +5213,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eaf9954-e71a-460d-bfbd-e065571e085d",
+   "id": "aa2e384e-18bb-4b4f-87fc-f7517900521f",
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "Example: Random Forest Classifier  \n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth`  \n",
-    "- `min_samples_split`\n",
-    "- `min_samples_leaf`\n",
-    "- `max_features`\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: Random Forest Classifier</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>min_samples_split</code></li>\n",
+    "        <li><code>min_samples_leaf</code></li>\n",
+    "        <li><code>max_features</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "</div>\n"
    ]
   },
   {
@@ -5287,22 +5293,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40e89ff-bac7-4401-8b69-1ebb1f782de1",
+   "id": "d1abd5ea-a197-49d2-85e4-c546ea4923e4",
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "Example: XGBoost Classifier\n",
-    "\n",
-    "The following hyperparameters are typically the most impactful:\n",
-    "- `n_estimators`\n",
-    "- `max_depth` \n",
-    "- `learning_rate`\n",
-    "- `subsample` \n",
-    "- `colsample_bytree`\n",
-    "- `gamma`\n",
-    "- `min_child_weight`\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <p>💡 Example: XGBoost Classifier</p>\n",
+    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "    <ul>\n",
+    "        <li><code>n_estimators</code></li>\n",
+    "        <li><code>max_depth</code></li>\n",
+    "        <li><code>learning_rate</code></li>\n",
+    "        <li><code>subsample</code></li>\n",
+    "        <li><code>colsample_bytree</code></li>\n",
+    "        <li><code>gamma</code></li>\n",
+    "        <li><code>min_child_weight</code></li>\n",
+    "    </ul>\n",
+    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
+    "</div>\n"
    ]
   },
   {
