In machine_learning_template.ipynb > Modeling (Regression) > Final Model section: Update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3788,22 +3788,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef98c90-8aca-4cea-abae-91730047696c",
+   "id": "2a0fcc93-aa1f-48a2-b11d-399ddf8807f8",
    "metadata": {},
    "source": [
     "## Final Model  \n",
-    "Based on hyperparameter tuning, the following model achieved the best performance (e.g., RMSE = 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.\n",
-    "\n",
-    "Example final model: XGBoost Regressor  \n",
-    "Selected hyperparameters:\n",
-    "- `n_estimators=300`\n",
-    "- `max_depth=4` \n",
-    "- `learning_rate=0.1`\n",
-    "- `subsample=0.8` \n",
-    "- `colsample_bytree=0.8`\n",
-    "- `gamma=0.1`\n",
-    "- `min_child_weight=3`\n",
-    "- `random_state=42`"
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Select the best model based on hyperparameter tuning. <br><br> \n",
+    "    💡 Example: The XGBoost Regressor model achieved the best performance (e.g., RMSE = 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.  \n",
+    "    <br><br>\n",
+    "    Hyperparameter Values:  \n",
+    "    <ul>\n",
+    "        <li><code>n_estimators=300</code></li>\n",
+    "        <li><code>max_depth=4</code></li>\n",
+    "        <li><code>learning_rate=0.1</code></li>\n",
+    "        <li><code>subsample=0.8</code></li>\n",
+    "        <li><code>colsample_bytree=0.8</code></li>\n",
+    "        <li><code>gamma=0.1</code></li>\n",
+    "        <li><code>min_child_weight=3</code></li>\n",
+    "        <li><code>random_state=42</code></li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
