In machine_learning_template.ipynb > Modeling (Regression) section: Add blue box for all section headers using html and css

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -17,6 +17,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "695ebdf5-40f4-4ff7-93d9-204e1eca57f8",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Your H1 Title</h1>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Your H2 Title</h2>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Your H3 Title</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Your H4 Title</h4>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cbf7c4ae-408e-4aeb-9fe9-e20263d2ac7f",
    "metadata": {},
    "source": [
@@ -2582,10 +2604,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
+   "id": "6dc85084-35ba-46e8-82aa-db1dacb9f2f5",
    "metadata": {},
    "source": [
-    "# Modeling (Regression)  \n",
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px\">\n",
+    "    <h1 style=\"margin:0px\">Modeling (Regression)</h1>\n",
+    "</div>\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ For a regression problem, where the task is to predict a numerical target variable. \n",
     "</div>"
@@ -2596,7 +2620,10 @@
    "id": "bc4a506f-0b4a-4aad-bfac-3e68f65f3dea",
    "metadata": {},
    "source": [
-    "## Helper Function for Residual Plots  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Helper Function for Residual Plots</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically. \n",
     "</div>"
@@ -2646,10 +2673,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
+   "id": "7b415b78-03cc-41e8-8040-7abc98cb60e1",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Individually)  "
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Training Baseline Models (Individually)  </h2>\n",
+    "</div>"
    ]
   },
   {
@@ -2657,7 +2686,10 @@
    "id": "2fa28f5b-8e46-4813-9920-8cf9f79328e2",
    "metadata": {},
    "source": [
-    "### Linear Regression  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Linear Regression</h3>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -2710,7 +2742,10 @@
    "id": "028ee293-544b-4346-a5a9-39592799ee8e",
    "metadata": {},
    "source": [
-    "### Elastic Net Regression  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Elastic Net Regression</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -2791,7 +2826,10 @@
    "id": "8ad21cad-c8f5-4a04-82de-e30226ce3032",
    "metadata": {},
    "source": [
-    "### K-Nearest Neighbors Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">K-Nearest Neighbors Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -2864,7 +2902,10 @@
    "id": "a000a9c5-aa40-4871-927e-cd5bfb4a4290",
    "metadata": {},
    "source": [
-    "### Support Vector Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Support Vector Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -2937,7 +2978,10 @@
    "id": "99a0d369-7b24-4dc9-b452-b372a822d0be",
    "metadata": {},
    "source": [
-    "### Decision Tree Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Decision Tree Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -3016,7 +3060,10 @@
    "id": "2ae2e272-3a4e-40c0-9d7d-c45ce19b43dc",
    "metadata": {},
    "source": [
-    "### Random Forest Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Random Forest Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -3095,7 +3142,10 @@
    "id": "ab373eef-06bf-498b-b9f2-518db59a9522",
    "metadata": {},
    "source": [
-    "### Multi-Layer Perceptron Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Multi-Layer Perceptron Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -3180,7 +3230,10 @@
    "id": "ab4c8bbc-f07a-41e9-a29b-2f410b518c90",
    "metadata": {},
    "source": [
-    "### XGBoost Regressor  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">XGBoost Regressor</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -3271,7 +3324,10 @@
    "id": "37b85e39-0770-44c4-b67c-85896b0c82ee",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Pipeline)\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Training Baseline Models (Pipeline)</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Train 8 baseline models:  \n",
     "    <ul>\n",
@@ -3369,7 +3425,10 @@
    "id": "caccfbd5-1687-4cd8-8b6a-df2e146c94d3",
    "metadata": {},
    "source": [
-    "## Hyperparameter Tuning  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Hyperparameter Tuning</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
     "    💡 Example: The following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:  \n",
@@ -3387,7 +3446,10 @@
    "id": "f2a5167a-77c1-4572-b26e-343a60ac01e9",
    "metadata": {},
    "source": [
-    "### Grid Search  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Grid Search</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
     "    ℹ️ Hyperparameters:  \n",
     "    <ul>  \n",
@@ -3419,7 +3481,10 @@
    "id": "d3e0291e-5f7a-43c4-a1d3-b409fa056362",
    "metadata": {},
    "source": [
-    "#### Model 1\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 1</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: Random Forest Regressor</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -3497,7 +3562,10 @@
    "id": "7fd7a298-1e53-4efa-80b1-5152884a3131",
    "metadata": {},
    "source": [
-    "#### Model 2\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 2</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: XGBoost Regressor</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -3581,7 +3649,10 @@
    "id": "52c22068-57b1-4207-b8b2-2e414ed051ef",
    "metadata": {},
    "source": [
-    "### Randomized Search  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Randomized Search</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
     "    ℹ️ Hyperparameters:  \n",
     "    <ul>  \n",
@@ -3625,7 +3696,10 @@
    "id": "62c2d6e8-48d4-4e73-a0e2-578d5c38a8cd",
    "metadata": {},
    "source": [
-    "#### Model 1\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 1</h4>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: Random Forest Regressor</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -3705,7 +3779,10 @@
    "id": "b37163d1-945e-4a2b-a26d-8584862bd9bd",
    "metadata": {},
    "source": [
-    "#### Model 2\n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Model 2</h4>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <p>💡 Example: XGBoost Regressor</p>\n",
     "    <p>The following hyperparameters are typically the most impactful:</p>\n",
@@ -3791,7 +3868,10 @@
    "id": "2a0fcc93-aa1f-48a2-b11d-399ddf8807f8",
    "metadata": {},
    "source": [
-    "## Final Model  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Final Model</h2>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Select the best model based on hyperparameter tuning. <br><br> \n",
     "    💡 Example: The XGBoost Regressor model achieved the best performance (e.g., RMSE = 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.  \n",
@@ -3815,7 +3895,9 @@
    "id": "fbb70149-6fda-49df-a20b-10130e193888",
    "metadata": {},
    "source": [
-    "### Training Final Model"
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Training Final Model</h3>\n",
+    "</div> "
    ]
   },
   {
@@ -3846,7 +3928,9 @@
    "id": "d5419d06-3048-4ae6-a9a0-f92eea024c99",
    "metadata": {},
    "source": [
-    "### Model Evaluation"
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Model Evaluation</h3>\n",
+    "</div>"
    ]
   },
   {
@@ -4064,7 +4148,9 @@
    "id": "652cd43e-206f-464e-a2f8-06f3c641a06f",
    "metadata": {},
    "source": [
-    "### Feature Importance "
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Feature Importance</h3>\n",
+    "</div>  "
    ]
   },
   {
@@ -4192,7 +4278,10 @@
    "id": "e0a515b3-5e16-4026-b235-a322c152389f",
    "metadata": {},
    "source": [
-    "### Model Prediction Examples\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Model Prediction Examples</h3>\n",
+    "</div>\n",
+    "\n",
     "Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.  \n",
     "- Goal: Give stakeholders a clear picture of when the model performs well and when it struggles. \n",
     "- Recommendations: \n",
@@ -4287,7 +4376,10 @@
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
-    "### Saving Model  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Saving Model</h3>\n",
+    "</div>   \n",
+    "\n",
     "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
    ]
   },
